--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
 url: "http://Meditator-hkx.github.io"
-baseurl: ""
+baseurl: "Meditator-hkx.github.io"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/project"
@@ -25,8 +25,8 @@ description: Show my life and shining style!
 navbar-links:
   About Me: "aboutme"
   Articles:
-    - Techblog
-    - Life
+    - Techblog "http://Meditator-hkx.github.io/Techblog"
+    - Life "http://Meditator-hkx.github.io/Life"
     - Beautiful Jekyll: "http://kaixinhuang.com/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
@@ -44,7 +44,7 @@ navbar-links:
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+title-img: /path/to/image
 
 # --- Footer options --- #
 
@@ -120,7 +120,7 @@ title-separator: "-"
 # --- Don't need to touch anything below here (but you can if you want) --- #
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Vancouver"
+timezone: "China/Shanghai"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
