Add some customized link list.

--- a/_config.yml
+++ b/_config.yml
@@ -25,16 +25,16 @@ description: Show my life and shining style!
 navbar-links:
   About Me: "aboutme"
   Articles:
-    # - Techblog "http://Meditator-hkx.github.io/Techblog"
-    # - Life "http://Meditator-hkx.github.io/Life"
+    - Techblog: "http://www.kaixinhuang.com"
+    - Life: "www.baidu.com"
     - Beautiful Jekyll: "http://kaixinhuang.com/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
   Project:
-    - Research
-    - DDST
-    - Assignment
-    - Others
+    - Research: "Research/"
+    - DDST: "DDST-MC/"
+    - Assignment: "Assignment/"
+    - Others: "OTHERS/"
   
   Author's home: "http://kaixinhuang.com"
 
