--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ description: Show my life and shining style!
 navbar-links:
   About Me: "aboutme"
   Articles:
-    - Techblog: "http://www.kaixinhuang.com"
-    - Life: "www.baidu.com"
+    - Techblog: "http://www.kaixinhuang.com/"
+    - Life: "http://www.baidu.com/"
     - Beautiful Jekyll: "http://kaixinhuang.com/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
+    # - Learn markdown: "http://www.markdowntutorial.com/"
     - GitHub Pages: "https://pages.github.com/"
   Project:
     - Research: "Research/"
@@ -40,7 +40,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-# avatar: "/img/avatar-icon.png"
+avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
