--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ navbar-links:
     - Assignment: "Assignment/"
     - Others: "OTHERS/"
   
-  个人主页: "Meditator-hkx.github.io"
+  个人主页: "https://Meditator-hkx.github.io/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
