--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ description: Show my life and shining style!
 navbar-links:
   关于我: "aboutme"
   文章:
+    - 博客主页: "_posts/" 
     - Techblog: "Techblog/"
     - Life: "http://www.baidu.com/"
     - Beautiful Jekyll: "http://kaixinhuang.com/"
