--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
   文章:
     - 全部文章: "https://Meditator-hkx.github.io/" 
     - 技术博客: "Techblog/"
-    - 生活随笔: "https://Meditator-hkx.github.io/Life"
+    - 生活随笔: "https://Meditator-hkx.github.io/Life/"
     - Beautiful Jekyll: "http://kaixinhuang.com/"
     # - Learn markdown: "http://www.markdowntutorial.com/"
     - 测试 Page: "https://pages.github.com/"
@@ -125,7 +125,7 @@ timezone: "China/Shanghai"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
-paginate: 5
+paginate: 10
 
 kramdown:
   input: GFM
@@ -163,7 +163,7 @@ exclude:
 
 # prose.io config
 prose:
-  rooturl: '_posts'
+  # rooturl: '_posts'
   media: 'img'
   ignore:
     - 404.html
