--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   关于我: "aboutme"
   文章:
     - 全部文章: "https://Meditator-hkx.github.io/" 
-    - 技术博客: "Techblog/index.md"
+    - 技术博客: "Techblog/index"
     - 生活随笔: "Life/index.md"
     - 小说: "Novels/index.md"
   项目:
