--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ navbar-links:
   文章:
     - 全部文章: "https://Meditator-hkx.github.io/" 
     - 技术博客: "Techblog/index"
-    - 生活随笔: "Life/index.md"
+    - 生活随笔: "https://Meditator-hkx.github.io/Life/"
     - 小说: "Novels/index.md"
   项目:
     - 科学研究: "Research/index.md"
