--- a/_config.yml
+++ b/_config.yml
@@ -28,12 +28,12 @@ navbar-links:
     - 全部文章: "https://Meditator-hkx.github.io/" 
     - 技术博客: "Techblog/index"
     - 生活随笔: "https://Meditator-hkx.github.io/Life/"
-    - 小说: "Novels/index.md"
+    - 小说: "Novels/"
   项目:
-    - 科学研究: "Research/index.md"
-    - 课题项目: "DDST-MC/index.md"
-    - 自发小项: "MyProject/index.md"
-    - 有待补充: "OTHERS/index.md"
+    - 科学研究: "Research/"
+    - 课题项目: "DDST-NVM/"
+    - 自发小项: "MyProject/"
+    - 有待补充: "OTHERS/"
   
   个人主页: "https://Meditator-hkx.github.io/"
 
