update comments func

--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,12 @@ share-links-active:
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
-disqus: "kaixinhuang"
+# disqus: "kaixinhuang"
+
+<!-- UY BEGIN -->
+<div id="uyan_frame"></div>
+<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js"></script>
+<!-- UY END -->
 
 # Fill in your Google Analytics ID to track your website using GA
 #google_analytics: ""
