--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ navbar-links:
     - 精选文章: "https://Meditator-hkx.github.io/" 
     - 技术博客: "TechBlog/"
     - 生活随笔: "Life/"
+    - 诗云: "Poems/"
     - 小说: "Novels/"
   项目:
     - 科学研究: "Research/"
